changed package json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "chibilibrary",
-	"version": "0.0.1",
+	"version": "0.0.2",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build && npm run prepack",
@@ -29,7 +29,8 @@
 		".": {
 			"types": "./dist/index.d.ts",
 			"svelte": "./dist/index.js"
-		}
+		},
+		"./select": "./dist/select/index.js"
 	},
 	"peerDependencies": {
 		"svelte": "^5.0.0"
